# parallel

./: .gitignore  CMakeLists.txt  Report.docx
metriseis/mpi/mpiPoriginal/160x128/: original.x.128.23049.1.mpiP  original.x.16.27191.1.mpiP  original.x.4.27083.1.mpiP  original.x.64.27340.1.mpiP
metriseis/mpi/mpiPoriginal/320x256/: original.x.128.7335.1.mpiP  original.x.16.12955.1.mpiP  original.x.160.28329.1.mpiP  original.x.4.27440.1.mpiP  original.x.64.27544.1.mpiP
metriseis/mpi/mpiPoriginal/640x1024/: original.x.128.8633.1.mpiP  original.x.16.31938.1.mpiP  original.x.160.29498.1.mpiP  original.x.4.28411.1.mpiP  original.x.64.28759.1.mpiP
metriseis/mpi/mpiPoriginal/80x64/: original.x.16.26635.1.mpiP  original.x.4.26510.1.mpiP  original.x.64.26706.1.mpiP
src/: CMakeLists.txt
src/cuda/: CMakeLists.txt
src/cuda/src/: heatconv.cu
src/examples/: CMakeLists.txt
src/examples/src/: openmp_tutorial.c  ring.c
src/mpi/: CMakeLists.txt  main.c
src/mpi/src/: heatconv.c  mpi.c  mpi_conv.c  omp.c  orterun.exe.stackdump
src/mpi_original/: CMakeLists.txt
src/mpi_original/src/: mpi_heat2Dn.c  mpi_heat2Dnv2.c
src/openmp/: CMakeLists.txt  main.c
src/process_results/: ProcessResults.py
src/scripts/: cron_mpi.sh  cron_mpiC.sh  cron_omp.sh  generate_all.sh  generate_single.sh
src/useful/: External Tools.xml  commands.txt  notes.txt
